<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_layout_embedded"
    android:background="@android:color/transparent"
    android:elevation="@dimen/padding_layout_embedded"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout_embedded"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_layout_embedded">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:gravity="start"
            android:text="@string/repo_last_updated_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/repo_last_updated_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            tools:text="@string/repo_last_updated_placeholder_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_layout_embedded">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:gravity="start"
            android:text="@string/repo_stars_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/repo_star_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            tools:text="@string/repo_star_placeholder_count" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_layout_embedded">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:gravity="start"
            android:text="@string/repo_forks_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/repo_fork_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            tools:text="@string/repo_fork_placeholder_count" />
    </LinearLayout>
</LinearLayout>