<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/search_box_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/search_box_header_margin_start"
        android:layout_marginTop="@dimen/padding_layout_embedded"
        android:layout_marginBottom="@dimen/search_box_header_margin_bottom"
        android:text="@string/search_box_hint_text"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_layout_embedded_small"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_layout_embedded"
            android:layout_weight="3"
            android:backgroundTint="@android:color/darker_gray"
            android:hint="@string/search_box_hint_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_layout_embedded_small"
            android:layout_weight="1"
            android:text="@string/search_button_label" />
    </LinearLayout>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/padding_layout_embedded"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        tools:src="@drawable/ic_launcher_background"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:text="@string/user_name_placeholder_text"
        tools:visibility="visible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/public_repository_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_layout_embedded_small"
        android:layout_marginTop="@dimen/padding_layout_embedded"
        android:layout_marginEnd="@dimen/padding_layout_embedded_small"
        android:layout_marginBottom="@dimen/padding_layout_embedded"
        android:clipToPadding="false"
        android:splitMotionEvents="false"
        android:visibility="invisible"
        tools:visibility="visible" />
</LinearLayout>